#fix address edit align bug

--- a/_sass/components.form.scss
+++ b/_sass/components.form.scss
@@ -176,6 +176,7 @@
 }
 
 .tk-ff__address-icon {
+    margin: auto;
     position: relative;
     right: -4px;
     top: -1px;
